--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-hello
-good day
-oh how beautiful it is to start something new
+A very good morning to you.
+it is a beautiful day.
+and a wonderful day to start
